--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- ========================================== -->
   <!-- ส่วนที่แก้ไข: ใช้โลโก้จากไฟล์ edited-image.png -->
   <!-- ========================================== -->
-  <!-- 1. ไอคอนบนแถบ Browser (เปลี่ยนเป็น .ico ตามคำขอ) -->
+  <!-- 1. ไอคอนบนแถบ Browser -->
   <link rel="icon" type="image/x-icon" href="edited-image.ico">
   
   <!-- 2. ไอคอนสำหรับ iPhone/iPad/Android -->
@@ -318,14 +318,14 @@
           is_dark_mode: false, 
           payment_days_before: 5, 
           guest_permissions: currentUser.isAdmin ? 'add,manage,history,settings,edit,changelog' : 'manage,history,changelog',
-          login_logo_size: 250, // Default Login Logo Size
-          sidebar_logo_size: 60   // Default Sidebar Logo Size
+          login_logo_size: 250, 
+          sidebar_logo_size: 60
       };
 
       if (currentUser.isGuestView) return { ...defaultSettings, guest_permissions: 'manage' };
       
       const userSettings = allRecords.find(r => r.type === 'settings' && r.account_id === currentUser.id);
-      return { ...defaultSettings, ...userSettings }; // Merge with defaults
+      return { ...defaultSettings, ...userSettings }; 
     }
     
     function getGlobalGuestSettings() {
@@ -339,7 +339,6 @@
         return null;
     }
 
-    // Helper to get global settings for login page (before login)
     function getGlobalLogoSettings() {
         const adminSettings = allRecords.find(r => r.type === 'settings' && r.account_id === 'super_admin');
         if (adminSettings) {
@@ -655,7 +654,7 @@
           </nav>
           <div class="mt-8 pt-6 border-t" style="border-color: ${dark ? '#374151' : '#e5e7eb'};">
             <button id="logout-btn" class="w-full px-4 py-2 rounded-lg font-medium" style="background: ${dark ? '#374151' : '#e5e7eb'}; color: ${textColor};">ออกจากระบบ</button>
-            <p class="text-xs text-center mt-4 opacity-50" style="color: ${textColor};">Version V.4.0 (Admin Logo Config)</p>
+            <p class="text-xs text-center mt-4 opacity-50" style="color: ${textColor};">Version V.4.1 (Fix HTML)</p>
           </div>
         </div>
       `;
@@ -764,21 +763,27 @@
             </div>
             <p class="text-xs opacity-60" style="color: ${textColor};">⚠️ การเปลี่ยนแปลงค่านี้จะทำให้ระบบรีโหลดใหม่ทันทีเพื่อเชื่อมต่อกับฐานข้อมูลใหม่</p>
         </div>
-        <div class="p-6 rounded-xl shadow-md" style="background: ${surfaceColor}; border: 1px solid ${primaryColor}40;">
+    </div>
+    <div class="p-6 rounded-xl shadow-md" style="background: ${surfaceColor}; border: 1px solid ${primaryColor}40;">
             <h3 class="font-semibold mb-4 flex items-center gap-2" style="color: ${textColor};">
                 🎨 ตั้งค่าขนาดโลโก้ (Admin Only)
             </h3>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
                     <label class="block text-sm font-medium mb-1" style="color: ${textColor};">ขนาดโลโก้หน้า Login (px)</label>
-                    <input type="number" id="setting-login-logo-size" value="${settings.login_logo_size || 250}" class="w-full px-4 py-2 rounded-lg border text-sm" style="background: ${dark ? '#374151' : 'white'}; border-color: ${dark ? '#4b5563' : '#d1d5db'}; color: ${textColor};">
+                    <div class="flex gap-2">
+                        <input type="number" id="setting-login-logo-size" value="${settings.login_logo_size || 250}" class="w-full px-4 py-2 rounded-lg border text-sm" style="background: ${dark ? '#374151' : 'white'}; border-color: ${dark ? '#4b5563' : '#d1d5db'}; color: ${textColor};">
+                        <button onclick="document.getElementById('setting-login-logo-size').value='250'" class="px-3 py-1 text-xs rounded border hover:bg-gray-100 dark:hover:bg-gray-700">รีเซ็ต</button>
+                    </div>
                 </div>
                 <div>
                     <label class="block text-sm font-medium mb-1" style="color: ${textColor};">ขนาดโลโก้เมนูข้าง (px)</label>
-                    <input type="number" id="setting-sidebar-logo-size" value="${settings.sidebar_logo_size || 60}" class="w-full px-4 py-2 rounded-lg border text-sm" style="background: ${dark ? '#374151' : 'white'}; border-color: ${dark ? '#4b5563' : '#d1d5db'}; color: ${textColor};">
+                    <div class="flex gap-2">
+                        <input type="number" id="setting-sidebar-logo-size" value="${settings.sidebar_logo_size || 60}" class="w-full px-4 py-2 rounded-lg border text-sm" style="background: ${dark ? '#374151' : 'white'}; border-color: ${dark ? '#4b5563' : '#d1d5db'}; color: ${textColor};">
+                        <button onclick="document.getElementById('setting-sidebar-logo-size').value='60'" class="px-3 py-1 text-xs rounded border hover:bg-gray-100 dark:hover:bg-gray-700">รีเซ็ต</button>
+                    </div>
                 </div>
             </div>
-        </div>
     </div>
     <div class="p-6 rounded-xl shadow-md" style="background: ${surfaceColor};"><h3 class="font-semibold mb-4" style="color: ${textColor};">สิทธิ์ของผู้ไม่มีบัญชี (Guest)</h3><div class="space-y-2"><label class="flex items-center gap-3"><input type="checkbox" id="guest-manage" ${currentPermissions.includes('manage') ? 'checked' : ''} class="w-4 h-4 rounded" style="accent-color: ${primaryColor};"><span style="color: ${textColor};">เข้าถึงหน้าจัดการรายการลูกค้า</span></label><label class="flex items-center gap-3"><input type="checkbox" id="guest-history" ${currentPermissions.includes('history') ? 'checked' : ''} class="w-4 h-4 rounded" style="accent-color: ${primaryColor};"><span style="color: ${textColor};">เข้าถึงหน้าประวัติการทำรายการ</span></label><label class="flex items-center gap-3"><input type="checkbox" id="guest-changelog" ${currentPermissions.includes('changelog') ? 'checked' : ''} class="w-4 h-4 rounded" style="accent-color: ${primaryColor};"><span style="color: ${textColor};">เข้าถึงหน้าประวัติการอัปเดต</span></label><div class="h-px bg-gray-200 my-2 dark:bg-gray-700"></div><label class="flex items-center gap-3"><input type="checkbox" id="guest-settings" ${currentPermissions.includes('settings') ? 'checked' : ''} class="w-4 h-4 rounded" style="accent-color: ${primaryColor};"><span style="color: ${textColor};">เข้าถึงหน้าการตั้งค่า</span></label><label class="flex items-center gap-3"><input type="checkbox" id="guest-add" ${currentPermissions.includes('add') ? 'checked' : ''} class="w-4 h-4 rounded" style="accent-color: ${primaryColor};"><span style="color: ${textColor};">เข้าถึงหน้าเพิ่มข้อมูลลูกค้า</span></label><label class="flex items-center gap-3"><input type="checkbox" id="guest-edit" ${currentPermissions.includes('edit') ? 'checked' : ''} class="w-4 h-4 rounded" style="accent-color: ${primaryColor};"><span style="color: ${textColor};">แก้ไข / ชำระเงิน / ลบข้อมูล</span></label></div></div>` : ''}
       <button id="save-settings-btn" class="w-full py-3 rounded-lg font-medium" style="background: ${primaryColor}; color: white;">บันทึกการตั้งค่า</button></div></div>`;
@@ -786,6 +791,7 @@
 
     function renderChangelog(config, dark, surfaceColor, textColor, primaryColor) {
       const logs = [
+        { version: "V.4.1 (Fix HTML)", date: "18/01/2026", changes: ["แก้ไขบั๊กหน้าตั้งค่า Admin แสดงผลผิดพลาด", "เพิ่มปุ่มรีเซ็ตขนาดโลโก้"] },
         { version: "V.4.0 (Admin Logo Config)", date: "18/01/2026", changes: ["เพิ่มระบบตั้งค่าขนาดโลโก้ได้เองในหน้า Admin Settings", "ปรับปรุงระบบ Global Settings ให้ยืดหยุ่นขึ้น"] },
         { version: "V.3.9 (Logo Max Size)", date: "18/01/2026", changes: ["ขยายขนาดโลโก้หน้า Login เป็น 350px", "ขยายขนาดโลโก้แถบเมนูข้างเป็น 200px"] },
         { version: "V.3.8 (Logo Resizing)", date: "18/01/2026", changes: ["ปรับขนาดโลโก้หน้า Login เป็น 250px", "ปรับขนาดโลโก้แถบเมนูเป็น 60px"] },
